package com.example.ProductionManagementSystem.Model.Const;

public enum Status {
    NEW, IN_PROGRESS,  PENDING, COMPLETED, CANCELLED, READY_TO_SHIP, SHIPPED, START
}
